logs/soogang.log
Listing '.'...
Listing './bin'...
Compiling './bin/runxlrd.py'...
Compiling './bin/vba_extract.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/XlsxWriter-0.9.8.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/qiniu'...
Listing './lib/python3.5/site-packages/qiniu/services'...
Listing './lib/python3.5/site-packages/qiniu/services/cdn'...
Listing './lib/python3.5/site-packages/qiniu/services/compute'...
Listing './lib/python3.5/site-packages/qiniu/services/processing'...
Listing './lib/python3.5/site-packages/qiniu/services/storage'...
Listing './lib/python3.5/site-packages/qiniu-7.1.4.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/soogang'...
Compiling './lib/python3.5/site-packages/soogang/upload.py'...
***   File "./lib/python3.5/site-packages/soogang/upload.py", line 15
    key = f'{key}.{postfix}'
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/soogang/zhonggang.py'...
***   File "./lib/python3.5/site-packages/soogang/zhonggang.py", line 116
    raise ValueError(f'资源单第{self.current_sheet.number}张表缺少表头 {missings}')
                                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/soogang-0.0.1.9.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/xlrd'...
Listing './lib/python3.5/site-packages/xlrd/doc'...
Listing './lib/python3.5/site-packages/xlrd/examples'...
Listing './lib/python3.5/site-packages/xlrd-1.0.0.dist-info'...
Listing './lib/python3.5/site-packages/xlsxwriter'...
Listing './share'...
Listing './share/python-wheels'...
